# nextbrain-python

./: .gitignore  LICENSE  README.md  pyproject.toml
nextbrain/: __init__.py  nextbrain.py
tests/: async_app_nextbrain.py  async_nextbrain.py  sync_app_nextbrain.py  sync_nextbrain.py
