[tool.poetry]
name = "nextbrain"
version = "0.1.5"
description = "Convenient access to the NextBrain API from python"
authors = ["Softpoint Consultores S.L. <info@softpoint.es>", "Fernando Pérez <fernando@softpoint.es>"]
readme = "README.md"
license = "LICENSE"
repository = "https://github.com/NextBrain-ai/nextbrain-python"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
